--- a/_posts/2019-01-14-celery定时任务.md
+++ b/_posts/2019-01-14-celery定时任务.md
@@ -129,7 +129,9 @@ crontab(hour=7, minute=30, day_of_week=1)
 
 
 
-### 执行任务
+### 执行任务 
+
+**test_celery为app**
 
 先启动celery
 
@@ -138,6 +140,10 @@ crontab(hour=7, minute=30, day_of_week=1)
 再启动定时任务
 
 > celery -A test_celery beat
+
+beat与worker一起开启
+
+> celery -B -A test_celery worker -l info
 
 
 
