--- a/_posts/2018-11-19-压力测试工具segie的使用.md
+++ b/_posts/2018-11-19-压力测试工具segie的使用.md
@@ -8,11 +8,12 @@ tags:
   - study
 ---
 
-## segie
+## segie压力测试工具segie的使用
 
-压力测试工具segie的使用
 使用文档参考地址：https://www.joedog.org/siege-manual/
+
 siege4地址：http://download.joedog.org/siege/
+
 下载程序安装包：http://download.joedog.org/siege/siege-4.0.2.tar.gz
 
 #解压缩.tar.gz程序包
@@ -29,13 +30,20 @@ make clean
 
 #编译和安装
 make && make install
+
+
 siege命令参数
 
 SIEGE 4.0.2
+
 Usage: siege [options]
+
 siege [options] URL
+
 siege -g URL
+
 Options:
+
 ```
 -V, --version VERSION, prints the version number.
 -h, --help HELP, prints this section.
@@ -63,38 +71,63 @@ between .001 and NUM. (NOT COUNTED IN STATS)
 ```
 
 参数项使用说明
+
 -c 100 指定并发数 100
+
 -r 10 指定测试次数 10
+
 -f urls.txt 指定url文件
+
 -i internet系统，随机发送url
+
 -b 请求无需等待 -d NUM 延迟多少秒
+
 -t 5 持续测试5分钟 -t3600S, -t60M, -t1H
+
 -v 输出详细信息
+
 -l 记录压测日志信息到指定文件
+
+
+
 # -r和-t一般不同时使用
 
 例如：
+```
 cd /opt/siege4/bin
+
 ./siege -c 10 -r 10 -b -t 10 www.xxx.com
+```
 
 指定http请求头 文档类型
-./siege -H "Content-Type:application/json" -v -c 10 -r 10 -f urls.txt -i -d 1 -t20s
+```
+./siege -H "Content-Type:application/json" -v -c 10 -r 10 -f urls.txt -i -d 1 -t20s.
+```
 
 读入文件方式：
 post中的参数可以放到一个文件，再通过以上方式来使用
+```
 ./siege -c 2 -r 2 -b -t 10 www.xxx.com post <./purlx.txt
+```
 
 在文件中，可以定义变量。类似shell的方式，使用或或()。
 host=www.xxx.com http://${host}/index.html
 
 文件urls.txt中的地址：
+
 http://www.xxx.com/index.html
+
 http://www.xxx.com/xxx.jsp
+
 http://www.xxx.com/xxx.do?key=value
+
 http://www.xxx.com/xxx.do post key=value
+
 http://www.xxx.com/xxxx.do post key1=value&key2=value2
 
 结果说明：
+
+```
 Transactions: 总共测试次数
 Availability: 成功次数百分比
 Elapsed time: 总共耗时多少秒
@@ -109,3 +142,4 @@ Longest transaction: 最长响应时间
 Shortest transaction: 最短响应时间
 1，发送post请求时，url格式为：http://www.xxx.com/ post p1=v1&p2=v2
 2，如果url中含有中文和空格，需先进行encode编码
+```
