--- a/_posts/2019-03-31-很久之前写的在线网站-可看视频.md
+++ b/_posts/2019-03-31-很久之前写的在线网站-可看视频.md
@@ -10,7 +10,7 @@ tags:
 
 # mxonline
 
-项目网站 <www.dogebug.online>
+[项目网站](http://www.dogebug.online)   [www.dogebug.online](http://www.dogebug.online)
 
 　　一个可以在线学习的教育网站，对于用户而言，可以查看，收藏，评论课程、授课机构、讲师等；对于授课机构而言，可以增加、修改、删除课程内容，课程详情等。模块完整、功能完善、达到上线标准的在线教育平台。
 
