--- a/_posts/2019-06-01-Mac各种配置-个人记录走过的坑.md
+++ b/_posts/2019-06-01-Mac各种配置-个人记录走过的坑.md
@@ -23,6 +23,7 @@ tags:
 1. **Xcode**：Xcode会包含很多开发工具，今后会用到，具体安装Xcode步骤：
 
 ```
+# 
 xcode-select --install
 # 运行下面的命令看你是否成功安装：
 xcode-select -p
@@ -35,6 +36,24 @@ xcode-select -p
 
 ```shell
 ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+```
+
+3. **Git 补全**
+
+> 尝试了很多种教程，记录成功的一个
+```shell
+curl  https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash -o ~/.git-completion.bash
+
+# 添加到 .bash_profile 
+vim ~/.bash_profile 
+
+# 添加内容
+if [ -f ~/.git-completion.bash ]; then
+  . ~/.git-completion.bash
+fi
+
+# 保存后刷新
+source ~/.bash_profile 
 ```
 
 
@@ -195,3 +214,40 @@ mysql_secure_installation
 ```
 
 2019-06-01 01:01 以后再更新
+
+
+
+## python
+
+自带了python2.7 但没有预装pip
+
+所以用easy_install
+
+```shell
+# 不用sudo会出现权限错误
+sudo eays_install pip
+```
+
+
+
+在用brew装mysql的时候附属依赖安装了python3.7
+
+
+
+再来装虚拟环境Virtualenv、virtualenvwrapper
+
+```shell
+pip install virtualenv
+# pip install virtualenvwrapper
+# 再python2装virtualenvwrapper时，安装six会报错
+# 原因是Apple预安装的这个six库出于安全原因被设置为sudo也不可以执行操作，所以
+# 需要依赖于高版本的库就需要更新six，但是没有six的权限，所以就会报错。
+sudo pip install six --upgrade --ignore-installed six
+pip install virtualenvwrapper
+
+pip3 install virtualenv 
+pip3 install virtualenvwrapper
+```
+
+
+
