--- a/_posts/2018-09-8-windows环境下修改镜像源.md
+++ b/_posts/2018-09-8-windows环境下修改镜像源.md
@@ -5,7 +5,9 @@ description:
 date: 2018-09-08 23:16:00
 categories:
 comments: true
-tags: python
+tags: 
+  - python
+  - Windows
 ---
 
 ## 一、在windows环境下修改pip镜像源的方法
